--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,13 +1,25 @@
-#header{
-    position: absolute;
-    top: 0;
-    left: 0;
-}
+/*****************************
+*
+* Author: Sylwia Kozon
+* Date: 3.02.22
+*
+******************************/
 
-#header h1{
-    font-size: 32px;
-}
+
+
+/* Style all P tags */
 
 p{
-    font-size: 12px;
+    font-size: 18px;
+    color: red;
+}
+
+#header p {
+    font-size: 24px;
+}
+
+/* Style all header tags */
+
+h1{
+    font-size: 44px;
 }
