--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,25 +1,24 @@
-/*****************************
-*
-* Author: Sylwia Kozon
-* Date: 3.02.22
-*
-******************************/
+/* TARGETING ELEMENTS / TAGS */
 
-
-
-/* Style all P tags */
-
-p{
-    font-size: 18px;
+P{
+    font-size: 12px;
     color: red;
 }
 
-#header p {
-    font-size: 24px;
+a{
+    text-decoration: underline;
+    color: blue;
 }
 
-/* Style all header tags */
+span{
+    text-transform: uppercase;
+}
 
 h1{
-    font-size: 44px;
+    font-size: 32px;
+}
+
+div{
+    width: 100%;
+    background-color: grey;
 }
