--- a/css/syntax.css
+++ b/css/syntax.css
@@ -1,9 +1,5 @@
 #banner{
-    background-color: #606060;
     width: 100%;
     height: 300px;
+    background-color: rgb(250, 150, 60);
 }
-    
-
-
-
