Added properties for #circle-2 in syntax.html

--- a/css/syntax.css
+++ b/css/syntax.css
@@ -7,3 +7,13 @@
     top: 50px;
     left: 50px;
 }
+
+#circle-2{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(200, 100, 200);
+    border-radius: 200px;
+    top: 250px;
+    left: 150px;
+}
