--- a/css/syntax.css
+++ b/css/syntax.css
@@ -17,3 +17,13 @@
     top: 250px;
     left: 150px;
 }
+
+#circle-3{
+    width: 400px;
+    height: 400px;
+    position: absolute;
+    background: rgb(100, 200, 200);
+    border-radius: 200px;
+    top: 50px;
+    left: 250px;
+}
