--- a/css/syntax.css
+++ b/css/syntax.css
@@ -6,6 +6,8 @@
     border-radius: 200px;
     top: 50px;
     left: 50px;
+    opacity: 1;
+    text-align: center;
 }
 
 #circle-2{
@@ -16,14 +18,17 @@
     border-radius: 200px;
     top: 250px;
     left: 150px;
+    opacity: 0.3;
+    text-align: center;
 }
 
 #circle-3{
     width: 400px;
     height: 400px;
     position: absolute;
-    background: rgb(100, 200, 200);
+    background: rgba(100, 200, 200, 0.1);
     border-radius: 200px;
     top: 50px;
     left: 250px;
+    text-align: center;
 }
